--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,17 @@
+/*DEFAULT/MOBILE VIEW*/
 body {
-    background-image: url("../img/mobile-background.jpg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-color: white;
     color: white;
     font-family: monospace;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 #container {
 	display: grid;
-	grid-template-columns: 1fr;
-	grid-gap: 1em;
-	grid-auto-rows: minmax(9em, auto);
+    min-height: 100vh;
+    width: 100vw;
+    grid-template-columns: 1fr; 
+    grid-auto-rows: minmax(9em, auto);
 }
 
 #header{
@@ -19,44 +20,72 @@ body {
     font-size: 40px;
     opacity: 0.8;
     display: flex;
+    margin-right: -0.5em;
+    margin-left: -0.5em;
     justify-content: space-between;
     align-items: center;
     margin-top: -20px;
     padding-left: 30px;
-    margin-bottom: -15px;
 }
 
-.box, #footer{
-    border: 1px solid black;
+.box {
+    color: black;
+}
+
+.box1, .box2 {
+    display: none;
+}
+
+#navboxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-auto-rows: minmax(9em, auto);
+    margin: 0 auto;
+    height: 50vh;
+    grid-gap: 10px;
+    margin-bottom: 5%;
+}
+
+.navbox1,
+.navbox2,
+.navbox3, 
+.navbox4{
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    height: 100%;
+    margin: 10px;
+}
+
+.navbox1:hover,
+.navbox2:hover,
+.navbox3:hover, 
+.navbox4:hover {
+    color:#2FE686;
 }
 
 #footer {
 	display: grid;
-	grid-template-columns: 1fr;
-	grid-gap: 1em;
-	grid-auto-rows: minmax(9em, auto);
 	padding: 0.5em;
-}
-
-.footersection {
-    background-color: #fff;
-    opacity: 0.5;
-}
-
-.footersection img {
-    width: 100px;
+    background-color: black;
+    opacity: 0.8;
+    width: 100vw;
+    min-height: 5vh;
+    margin-left: -0.6em;
 }
 
 li, a {
 font-family: monospace;
-font-weight: 400;
 font-size: 25px;
 color: #fff;
 text-decoration: none;
 }
+
 .menu {
 list-style: none;
 margin-right: 49px;
+display: none;
 }
 
 .menu li {
@@ -81,12 +110,9 @@ li {
     display: inline;
 }
 
+/*TABLET VIEW*/
 @media (max-width: 1200px) and (min-width:960px) {
     body {
-        background-image: url("../img/tablet-background.jpg");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
     }
 	#container {
 		grid-template-columns: repeat(12, 1fr);
@@ -94,40 +120,64 @@ li {
 	
 	#header {
 		grid-column: 1/13;
+        font-size: 30px;
 	}
-	
+
+    .menu {
+        display: block;
+        margin-right: 30px;
+        }
+
+	li, a {
+        font-size: 20px;
+        }
 	
 	.box1 {
-		grid-column: 1/4;
+		grid-column: 1/8;
+        height: 400px;
+        font-size: 30px;
+        text-align: center;
+        margin-top: 10%;
+        display: block;
 	}
 	.box2 {
-		grid-column: 4/10;
+        grid-column: 8/13;
+        position: relative;
+        display: block;
+        margin-right: 5%;
 	}
 	
-	.box3 {
-		grid-column: 10/13;
-	}
-	
-	.content {
-		grid-column: 1/9;
-	}
-	
-	.sidebar {
-		grid-column: 9/13;
-	}
-	
+    #navboxes {
+        display: none;
+    }
+
+    .box2 img{
+        width: 100%;
+    }
+
 	#footer {
 		grid-column:1/13;
-		grid-template-columns: 1fr 1fr 1fr 1fr;
 	}
+
+    .text-block {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        background-color: black;
+        opacity: 0.8;
+        color: white;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    
+    .text-block h4 {
+        color:#2FE686;
+    }
 }
 
+/*DESKTOP VIEW*/
 @media (min-width: 1200px){
     body {
-        background-image: url("../img/background.jpg");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
     }
 #container {
 	grid-template-columns: repeat(12, 1fr);
@@ -137,22 +187,51 @@ li {
 	grid-column: 1/13;
 }
 
+.menu {
+    display: block;
+}
+
+.box1 {
+	grid-column: 1/8;
+    height: 400px;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 10%;
+    display: block;
+}
 
 .box2 {
-	grid-column: 1/13;
-    height: 400px;
+    grid-column: 8/13;
+    position: relative;
+    display: block;
+    margin-right: 5%;
 }
 
-.content {
-	grid-column: 1/9;
+.text-block {
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    background-color: black;
+    opacity: 0.8;
+    color: white;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+.text-block h4 {
+    color:#2FE686;
 }
 
-.sidebar {
-	grid-column: 9/13;
+.box2 img{
+    width: 100%;
 }
+
+#navboxes {
+        display: none;
+    }
+
 
 #footer {
-	grid-column:1/13;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-column:1/13;
 }
 }
