--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,259 @@
-body{
+/*DEFAULT/MOBILE VIEW*/
+body {
+    background-color: white;
+    color: white;
+    font-family: monospace;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+#container {
+	display: grid;
+    min-height: 100vh;
+    width: 100vw;
+    grid-template-columns: 1fr; 
+    grid-auto-rows: minmax(9em, auto);
+    align-content: space-between;
+}
+
+#header{
+	background-color: white;
+    color: whitesmoke;
+    height: 100px;
+    font-size: 40px;
+    opacity: 0.8;
+    display: flex;
+    margin-right: -0.5em;
+    margin-left: -0.5em;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: -20px;
+    padding-left: 30px;
+}
+
+
+ .grid {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 100vh;
+    background-color: white;
+    grid-gap: 0px 5px ;
+  }
+  
+  .grid-item {
+    display: flex;
+        display: flex;
+        align-content: flex-end;
+        flex-wrap: nowrap;
+        flex-direction: column;
     
+  }
+  
+
+  .grid-item-1 {
+    grid-column: 1 / 7;
+  }
+  
+  .f-end-1 > .image-holder {
+    justify-content: flex-start;
+    align-items: flex-start
+  }
+  
+  .grid-item-content {
+    background: green;
+    padding: 40px;
+  }
+  
+  .b-end-2 {
+    grid-column: 7 / -1;
+  }
+  
+  .grid-item-2 > .image-holder {
+    justify-content: flex-end;
+    align-items: flex-start
+  }
+  
+  .grid-item-3 {
+    grid-row: 2 / 2;
+    grid-column: 1 / -1;
+  }
+  
+  .full-stack-4 {
+    grid-column: 1 / 7;
+  }
+  
+  .grid-item-4 > .image-holder {
+    justify-content: flex-start;
+    align-items: flex-end
+  }
+  
+  .UX {
+    grid-column: 7 / -1;
+  }
+  
+  .UX > .image-holder {
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-top: 40px;
+  }
+  
+  .image-holder {
+    display: flex;
+  }
+  .image {
+
+    display: inherit;
+    width: 420px;
+    height: auto;
+    object-fit: cover;
+
+  /*   display: inherit;
+    width: 100%;
+    height: auto;
+    object-fit: cover */
+  }
+  
+  .madinah {
+    /* width: 100%; */
+    padding-left: 1090px;
+  }
+
+#navboxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-auto-rows: minmax(9em, auto);
+    margin: 0 auto;
+    height: 50vh;
+    grid-gap: 10px;
+    margin-bottom: 5%;
+} 
+
+.navbox1,
+.navbox2,
+.navbox3, 
+.navbox4{
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    height: 100%;
+    margin: 10px;
+}
+
+.navbox1:hover,
+.navbox2:hover,
+.navbox3:hover, 
+.navbox4:hover {
+    color:#2FE686;
+}
+
+#footer {
+	display: grid;
+	padding: 0.5em;
+    background-color: black;
+    color: whitesmoke;
+    opacity: 0.8;
+    width: 100vw;
+    min-height: 5vh;
+    margin-left: -0.6em;
+}
+
+li, a {
+font-family: monospace;
+font-size: 25px;
+color: #fff;
+text-decoration: none;
+}
+
+.menu {
+list-style: none;
+margin-right: 49px;
+display: none;
+}
+
+.menu li {
+display: inline-block;
+padding: 0px 20px;
+}
+
+.menu li a {
+transition: all 0.3s ease 0s;
+}
+
+.menu li a:hover {
+color: #2FE686;
+}
+
+ul {
+    list-style-type: none;
+    
+}
+
+li {
+    display: inline;
+}
+
+/*TABLET VIEW*/
+@media (max-width: 1200px) and (min-width:960px) {
+    body {
+    }
+	#container {
+		grid-template-columns: repeat(12, 1fr);
+	}
+	
+	#header {
+		grid-column: 1/13;
+        font-size: 30px;
+	}
+
+    .menu {
+        display: block;
+        margin-right: 30px;
+        }
+
+	li, a {
+        font-size: 20px;
+        }
+
+
+	
+    #navboxes {
+        display: none;
+    }
+
+    .box2 img{
+        width: 100%;
+    }
+
+	#footer {
+		grid-column:1/13;
+	}
+
+/*DESKTOP VIEW*/
+@media (min-width: 1200px){
+    body {
+    }
+#container {
+	grid-template-columns: repeat(12, 1fr);
+}
+
+#header {
+	grid-column: 1/13;
+}
+
+.menu {
+    display: block;
+}
+
+
+}
+
+#navboxes {
+        display: none;
+    }
+
+
+#footer {
+    grid-column:1/13;
+}
 }
